--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,11 @@
   
   body {
     color: #565656;
+    margin: 0;
   }
 
   a, a:hover {
-    color: inherit; /* blue colors for links too */
+    color: inherit; /* blue cors for links too */
     text-decoration: inherit; /* no underline */
   }
   
@@ -34,7 +35,6 @@ body {
     line-height: normal;
     letter-spacing: normal;
     background-attachment: #fff;
-    padding: 20px;
     width: 100%;
 }
 
@@ -45,7 +45,7 @@ body {
 
 header {
     padding: 10px;
-    font-size: 16px;
+    font-size: 14px;
     display: flex;
     flex-direction: row;
 }
@@ -61,15 +61,18 @@ header {
     margin: 0 10px;
 }
 
+.nav-bar a:hover {
+    opacity: 0.5;
+}
+
 .logo {
     display: inline-block;
     width: 167px;
     height: 63px;
-    
+    margin-left: 20px;
 }
 
 .content {
-    max-width: 800px;
     margin: 0 auto;
 }
 
@@ -83,6 +86,10 @@ header {
     color: #ffffff;
 }
 
+.btn:hover {
+    opacity: 0.5;
+}
+
 .btn--primary {
     background-image: linear-gradient(274deg, #a50085, #e53768);
     color: #ffffff;
@@ -93,17 +100,55 @@ header {
     color: #e53768;
 }
 
-.contact {
+.how__image{
+    width: 300px;
+    height: 200px;
+    display: inline-block;
+}
+
+.how__list {
+    width: 49%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.how__list__item {
+    margin: 10px 0;
+}
+
+.how__list__index--bold {
+    font-size: 16px;
+    font-weight: 800;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #2b2b2d;
+    display: inline-block;
+    min-width: 15px;
+}
+
+.section {
+    max-width: 700px;
+    max-height: 500px;
     width: 100%;
-    max-width: none !important;
-    background-image: linear-gradient(278deg, #a50085, #e53768);
+    margin: 30px auto;
+}
+
+.section--full {
+    max-width: none;
 }
 
 .section__title {
     color: #e53768;
     display: inline-block;
     margin: 0 auto;
+    width: 100%;
     font-size: 18px;
+}
+
+.section__title--centered {
+
 }
 
 .section__title--strong {
@@ -115,7 +160,34 @@ header {
     color: #ffffff;
 }
 
-.experience__image {
-    width: 531px;
-    height: 708px;
+.contact {
+    width: 100%;
+    margin: 0 auto;
+    max-width: none !important;
+    background-image: linear-gradient(278deg, #a50085, #e53768);
+    color: #fff;
+}
+
+.experience__description__box {
+    box-shadow: 0 2px 11px 0 rgba(165, 165, 165, 0.62);
+    background-color: #ffffff;
+    border: sid 1px #a5a5a5;
+    padding: 20px;
+    position: relative;
+    width: 40%;
+    top: 50px;
+    left: 100px;
+}
+
+.experience__description {
+
+}
+
+.experience__description__image {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    top: -200px;
+    left: 350px;
+    z-index: -1;
 }
