--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@ header {
 }
 
 .nav-bar a {
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 .nav-bar a:hover {
@@ -69,6 +69,47 @@ header {
     display: inline-block;
     width: 167px;
     height: 63px;
+    margin: 0 20px;
+}
+
+.service {
+    padding: 10px;
+    margin: 10px;
+    background-color: #ffffff;
+    border: solid 1px #d0d0d0;
+    width: 300px;
+    height: 120px;
+    max-height: 200px;
+    box-sizing: content-box;
+    display: inline-block;
+}
+
+.service__row {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+}
+
+.service__icon {
+    width: 40px;
+    margin: 3px;
+}
+
+.service__name {
+    position: relative;
+    top: -12px;
+    font-size: 14px;
+    font-weight: 800;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #2b2b2d;
+}
+
+.service__list {
+    width: 40%;
+    margin: 10px auto;
 }
 
 .content {
