--- a/src/style.css
+++ b/src/style.css
@@ -229,6 +229,15 @@ header {
     margin: 20px 39%;
 }
 
+.contact__form p {
+    text-align: center;
+}
+
+.contact__form p.contact__email {
+    font-size: 16px;
+    font-weight: 600;
+}
+
 .contact__form__item {
     margin: 10px 0;
 }
