--- a/src/style.css
+++ b/src/style.css
@@ -318,7 +318,7 @@ header {
     }
     
     /* Smartphones (landscape) ----------- */
-    @media only screen and (min-width : 321px) {
+    @media only screen and (min-width : 321px) and (max-device-width : 480px) {
         header {
             display: flex;
             flex-direction: column;
@@ -396,7 +396,16 @@ header {
         }
 
         .oldhouser__image {
-            width: 90px;
+            margin-left: 30%;
+        }
+
+        .contact__form{
+            width: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            margin: 0 auto;
         }
     }
     
